Fixed non-responsiveness on small screens

--- a/src/styles/AddPlayer.css
+++ b/src/styles/AddPlayer.css
@@ -33,4 +33,8 @@
         margin: auto;
         width: 100px;
     }
+
+    .player-input {
+        width: 75%;
+    }
 }
